# llama.cpp

common/: arg.cpp  common.h
ggml/src/: ggml-backend-meta.cpp  ggml.c
src/: llama-model.cpp
src/models/: step35.cpp
tools/: CMakeLists.txt
tools/expert-profile/: CMakeLists.txt  expert-profile.cpp
tools/moe-pruning/: README.md  analyze_stats.py  build_expert_profile.sh  gguf_prune.py  sample_calibration.jsonl
tools/mtmd/: clip.cpp  clip.h  mtmd-cli.cpp  mtmd.cpp  mtmd.h
tools/mtmd/debug/: mtmd-debug.cpp
tools/server/: server-context.cpp
